--- a/package.json
+++ b/package.json
@@ -19,21 +19,23 @@
         "@slack/webhook": "^7.0.3",
         "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
+        "csurf": "^1.11.0",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "express-validator": "^7.2.0",
+        "helmet": "^7.1.0",
         "jsonwebtoken": "^9.0.2",
         "morgan-body": "^2.6.9",
         "multer": "^1.4.5-lts.1",
         "mysql2": "^3.11.0",
-        "sequelize": "^6.37.3",
-        "standard": "^17.1.0"
+        "sequelize": "^6.37.3"
     },
     "devDependencies": {
         "nodemon": "^3.1.4",
-        "sequelize-cli": "^6.6.2"
+        "sequelize-cli": "^6.6.2",
+        "standard": "^17.1.0"
     },
     "eslintConfig": {
-        "extends":"./node_modules/standard/eslintrc.json"
+        "extends": "./node_modules/standard/eslintrc.json"
     }
 }
