--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "csurf": "^1.11.0",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
+        "express-rate-limit": "^7.4.0",
         "express-validator": "^7.2.0",
         "helmet": "^7.1.0",
         "jsonwebtoken": "^9.0.2",
