--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
         "morgan-body": "^2.6.9",
         "multer": "^1.4.5-lts.1",
         "mysql2": "^3.11.0",
-        "sequelize": "^6.37.3"
+        "sequelize": "^6.37.3",
+        "uuid": "^10.0.0"
     },
     "devDependencies": {
         "nodemon": "^3.1.4",
