--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "morgan-body": "^2.6.9",
         "multer": "^1.4.5-lts.1",
         "mysql2": "^3.11.0",
+        "nodemailer": "^6.9.15",
         "sequelize": "^6.37.3",
         "uuid": "^10.0.0"
     },
