updade packages and env exaple,  implement cookies in heades

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,24 @@
 PORT = 3310
 
 PUBLIC_URL = http://localhost:3000
+COOKIE = develop
 
-JWT_SECRET = 'test'
 
-# Notificaciones de errores
-SLACK_WEBHOOK = 'https://hooks.slack.com/services/...'
+JWT_SECRET = 
+JWT_EMAIL = 
 
-MYSQL_DATABASE = 'db_node'
-MYSQL_USER = 'user_node'
-MYSQL_PASSWORD = 'root'
-MYSQL_HOST = 'localhost'
-ENGINE_DB = 'mysql'
+SLACK_WEBHOOK = 
+
+MYSQL_DATABASE = 
+MYSQL_USER = 
+MYSQL_PASSWORD = 
+MYSQL_HOST = 
+ENGINE_DB = 
+
+#EMAIL
+
+EMAIL_CLIENT_ID=
+EMAIL_CLIENT_SECRET=
+EMAIL_REDIRECT_URI=
+EMAIL_REFRESH_TOKEN=
+EMAIL_USER=
