--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "dependencies": {
         "@slack/webhook": "^7.0.3",
         "bcryptjs": "^2.4.3",
+        "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "csurf": "^1.11.0",
         "dotenv": "^16.4.5",
         "ejs": "^3.1.10",
-        "express": "^4.20.0",
+        "express": "^4.21.0",
         "express-rate-limit": "^7.4.0",
         "express-validator": "^7.2.0",
         "googleapis": "^144.0.0",
@@ -30,7 +31,7 @@
         "jsonwebtoken": "^9.0.2",
         "morgan-body": "^2.6.9",
         "multer": "^1.4.5-lts.1",
-        "mysql2": "^3.11.1",
+        "mysql2": "^3.11.2",
         "nodemailer": "^6.9.15",
         "sequelize": "^6.37.3",
         "uuid": "^10.0.0"
@@ -38,7 +39,7 @@
     "devDependencies": {
         "nodemon": "^3.1.4",
         "sequelize-cli": "^6.6.2",
-        "standard": "^17.1.0"
+        "standard": "^17.1.2"
     },
     "eslintConfig": {
         "extends": "./node_modules/standard/eslintrc.json"
