--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "main": "./app.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node app",
-        "start:dev": "nodemon app"
+        "start": "node app.js",
+        "start:dev": "nodemon app.js"
     },
     "keywords": [],
     "author": "https://github.com/velSoftDev",
