--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     },
     "license": "ISC",
     "dependencies": {
+        "@sendgrid/mail": "^8.1.4",
         "@slack/webhook": "^7.0.3",
         "bcryptjs": "^2.4.3",
         "cookie-parser": "^1.4.6",
@@ -32,7 +33,7 @@
         "morgan-body": "^2.6.9",
         "multer": "^1.4.5-lts.1",
         "mysql2": "^3.11.3",
-        "nodemailer": "^6.9.15",
+        "nodemailer": "^6.9.16",
         "sequelize": "^6.37.3",
         "uuid": "^10.0.0"
     },
