--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,3 +22,32 @@ services:
             PMA_PASSWORD: "root"
         depends_on:
             - db_node
+
+
+# version: "3.9"
+
+# services:
+#   db_node:
+#     image: mysql
+#     ports:
+#       - '${PORT}:3306'
+#     environment:
+#       MYSQL_DATABASE: ${MYSQL_DATABASE}
+#       MYSQL_ROOT_USER: ${MYSQL_USER}
+#       MYSQL_USER: ${MYSQL_USER}
+#       MYSQL_ROOT_PASSWORD: ${MYSQL_PASSWORD}
+#       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+#       MYSQL_HOST: ${MYSQL_HOST}
+#     env_file:
+#       - .env
+
+#   phpmyadmin:
+#     image: phpmyadmin/phpmyadmin
+#     ports:
+#       - '8080:80'
+#     environment:
+#       PMA_HOST: ${MYSQL_HOST}
+#       PMA_USER: ${MYSQL_USER}
+#       PMA_PASSWORD: ${MYSQL_PASSWORD}
+#     depends_on:
+#       - db_node
